# llvm

./: .gitignore  CMakeLists.txt  Makefile  app.c  app.ll  log.c  pass.cpp  plugin.cpp  start.c
analysis/: CMakeLists.txt  Makefile  collect-results.cpp  pass.cpp
app/: CMakeLists.txt  Makefile  app  app.c  app.ll
asm/: CMakeLists.txt  ISA.md  app.s  asm.isa  asmLexer.g4  asmParser.g4  emulatorImpl.cpp  lift.cpp
asm/IR-simulator/: CMakeLists.txt
asm/cmake/: BootstrapIsa.cmake
asm/func-creator/: CMakeLists.txt  funcCreator.cpp  funcCreator.h
asm/instruction-creator/: CMakeLists.txt  branchInstructionCreator.cpp  branchInstructionCreator.h
asm/instruction-creator/emulating/: CMakeLists.txt  emulatingInstructionCreator.cpp  emulatingInstructionCreator.h
asm/instruction-creator/translating/: CMakeLists.txt  translatingInstructionCreator.cpp  translatingInstructionCreator.h
asm/instruction-creator/utils/: CMakeLists.txt  utils.cpp  utils.h
asm/isa-creator/: CMakeLists.txt  bootstrapIsa.cpp  isaCreator.cpp  isaCreator.h  isaLexer.g4  isaParser.g4
asm/module-context/: CMakeLists.txt  moduleContext.cpp  moduleContext.h
asm/source-descriptor/: CMakeLists.txt  sourceDescriptor.cpp  sourceDescriptor.h
generator/: CMakeLists.txt  Makefile  executor.cpp  executor_generator.cpp  generated.ll
sim/: CMakeLists.txt  sim.h
source-creator/: CMakeLists.txt  sourceCreator.cpp  sourceCreator.h
trace/: analysis.txt  collect-results.cpp  log.c  pass.cpp
